add new style to Banner component

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,11 +1,17 @@
 <div class="bg-[url('/banner.png')] w-full relative h-[500px]">
-    <div class="w-full h-[500px] static bg-gradient-to-r bg-black/80"></div>
-    
-
-    <div class="absolute top-[80px] left-5 md:flex md:flex-col md:left-[350px] ">
-        <h1 class=" uppercase text-5xl font-extrabold md:6xl  text-white mb-5 md:w-[600px] md:text-center">Freedom Studios Academy</h1>
-        <p class="relative text-white mb-8 md:w-[600px] md:text-center">Taking the message of freedom to the end of the earth through media and representing christ in every way.</p>
-        <button class="bg-[#E11B19] w-[300px] h-[60px] uppercase rounded-full  font-extrabold text-white hover:bg-[#E11B19]/70 md:flex md:justify-center md:items-center md:ml-[160px]">select a plan</button>
-    </div>
-
+  <div class="absolute top-[80px] left-5 md:flex md:flex-col md:left-[350px]">
+    <h1
+      class="uppercase text-5xl font-extrabold md:6xl text-white mb-5 md:w-[600px] md:text-center"
+    >
+      Freedom Studios Academy
+    </h1>
+    <p class="relative text-white mb-8 md:w-[600px] md:text-center">
+      Taking the message of freedom to the end of the earth through media and
+      representing christ in every way.
+    </p>
+    <button
+      class="bg-[#E11B19] w-[300px] h-[60px] uppercase rounded-full font-extrabold text-white hover:bg-[#E11B19]/70 md:flex md:justify-center md:items-center md:ml-[160px]"
+      >select a plan</button
+    >
+  </div>
 </div>
